--- a/res/layout/activity_location.xml
+++ b/res/layout/activity_location.xml
@@ -19,23 +19,26 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="110dp"
         android:onClick="getKTopLocations"
-        android:text="Send" />
+        android:text="Send"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/tvK"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="66dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="50dp"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="50dp"
-        android:text="K = " />
+        android:layout_marginLeft="150dp"
+        android:text="K = "
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/etKValue"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" 
+        android:layout_height="50dp" 
         android:layout_toRightOf="@+id/tvK"
-        android:layout_alignBottom="@+id/tvK"
+        
+        android:layout_alignBaseline="@+id/tvK"
         android:inputType="number"/>
 
 </RelativeLayout>
